--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body background="background.jpg">
   <center>
-    <h2 class="btn btn-info heading">Family Realtime Identification
+    <h2 class="btn btn-success heading">Family Realtime Identification
       <hr>
       <center>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 heading_div">
