--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 heading_div">
           Model is trained to recognize 
           <br>
-          <div class="btn btn-warning heading_div2">
+          <div class="btn btn-info heading_div2">
             Mahe | Rk | Narayan | Raghav | 
           </div>
         </div> 
