--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
       <br>
     </h2>
     <br><br>
+    <p class="btn btn-danger result_para_tag">Object : 
+      <span id="result_object_name"></span>
+    </p>
+    <br><br>
+    <p class="btn btn-danger result_para_tag">Accuracy : 
+      <span id="result_object_accuracy"></span>
+    </p>
   </center>
+
+  <div class="copyright_footer">
+    Developed by Lakshna
+  </div>
+  
 
 <script src="main.js"></script>
 </body>
