--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Realtime Image Identification</title>
+  <title>Family Realtime Identification</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,7 +23,7 @@
           Model is trained to recognize 
           <br>
           <div class="btn btn-info heading_div2">
-            Mahe | Rk | Narayan | Raghav | 
+            Mom | Dad | Grandma | Grandpa | Chithi | Bro | Myself
           </div>
         </div> 
       </center>
@@ -31,11 +31,11 @@
     </h2>
     <br><br>
     <p class="btn btn-danger result_para_tag">Object : 
-      <span id="result_object_name"></span>
+      <span id="result_person_name"></span>
     </p>
     <br><br>
     <p class="btn btn-danger result_para_tag">Accuracy : 
-      <span id="result_object_accuracy"></span>
+      <span id="result_person_accuracy"></span>
     </p>
   </center>
 
